<resources>
    <string name="device_storage_full">请前往设备存储清理存储空间</string>
    <string name="back">返回</string>
    <string name="bit_rate">比特率</string>
    <string name="frame_rate">帧率</string>
    <string name="packet_loss_rate">丢包率</string>
    <string name="timer">计时</string>
    <string name="start_live">开始直播</string>
    <string name="resolution_select">分辨率</string>
    <string name="subtitle">字幕</string>
    <string name="share">分享</string>
    <string name="menu">菜单</string>
    <string name="contrast">对比度</string>
    <string name="sharpness">锐化</string>
    <string name="luminance">亮度</string>
    <string name="create_live">创建直播</string>
    <string name="live_name">直播名称</string>
    <string name="live_time">直播时间</string>
    <string name="live_activity">直播活动</string>
    <string name="media_storage">素材库</string>
    <string name="gif">GIF</string>
    <string name="show">显示</string>
    <string name="home">主页</string>
    <string name="float_back">返回</string>
    <string name="hide">隐藏</string>
    <string name="video_source">视频源</string>
    <string name="audio_source">音频源</string>
    <string name="live_pull">直播推流</string>
    <string name="watermark">水印</string>
    <string name="material">素材</string>
    <string name="background_loop">背景轮播</string>
    <string name="float_subtitle">提词器</string>
    <string name="whiteboard">白板</string>
    <string name="announcement">帮助</string>
    <string name="expand">展开</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_cancel">取消删除</string>
    <string name="next_page">下一页</string>
    <string name="previous_page">上一页</string>
    <string name="no_content">暂无内容</string>
    <string name="pick_up">收起</string>
    <string name="setting">设置</string>
    <string name="hdmi1">HDMI1</string>
    <string name="hdmi2">HDMI2</string>
    <string name="miracast">无线投屏</string>
    <string name="usb">USB</string>
    <string name="lan">局域网</string>
    <string name="remote">远程</string>
    <string name="line_in">Line in</string>
    <string name="mic">麦克风</string>
    <string name="audio_monitor">监听</string>
    <string name="audio_media">媒体</string>
    <string name="audio_noise_reduction">降噪</string>
    <string name="no_text">无内容</string>
    <string name="one_selected">*HDMI仅支持单选</string>
    <string name="push_setting_ip">服务器地址</string>
    <string name="push_setting_resolution">推流清晰度</string>
    <string name="push_setting_tips">请前往小程序或网页端设置推流地址</string>
    <string name="push_setting_error_disconnect">推流异常中断，请检查网络或服务器地址</string>
    <string name="push_setting_failure">推流开启失败，请检查网络或服务器地址</string>
    <string name="push_setting_change_parm">tips:请先关闭推流,再更改地址或分辨率</string>
    <string name="push_setting_change_parm2">tips:请等待推流关闭,再更改地址或分辨率</string>
    <string name="push_setting_change_push">tips:推流正在打开或关闭中，请稍后再试</string>
    <string name="push_setting_refresh_success">tips:推流地址刷新成功</string>
    <string name="push_setting_refresh">tips:请先关闭推流,再刷新推流地址</string>
    <string name="push_tips_content">请在加汇合小程序或网页端：live.synway.cn\n填写第三方直播推流地址，轻松实现多平台同时开播！</string>
    <string name="slave_setting">子画面设置</string>
    <string name="background_setting">背景设置</string>
    <string name="chrome_setting">抠像设置</string>
    <string name="chroma_info_item">抠图说明</string>
    <string name="chroma_info">(点击屏幕可选择抠除颜色)</string>
    <string name="chroma_color">抠除颜色</string>
    <string name="enable_chroma">启用抠像</string>
    <string name="enable_chroma_on">显示修改</string>
    <string name="enable_chroma_off">隐藏修改</string>
    <string name="chroma_key">抠除颜色</string>
    <string name="green_key">绿色</string>
    <string name="blue_key">蓝色</string>
    <string name="red_key">红色</string>
    <string name="chroma_setting_1">强度</string>
    <string name="chroma_setting_2">亮度</string>
    <string name="chroma_setting_3">伽马值</string>
    <string name="chroma_setting_4">相似度</string>
    <string name="chroma_setting_5">平滑度</string>
    <string name="chroma_setting_6">泄露减少</string>
    <string name="change_chroma_color">修改颜色</string>
    <string name="reset">重置</string>
    <string name="chroma_reset">恢复默认</string>
    <string name="background_select">背景类型</string>
    <string name="image_background">素材库</string>
    <string name="slave_background">摄像头</string>
    <string name="slave_select">来源</string>
    <string name="slave_hdmi1">HDMI1</string>
    <string name="slave_hdmi2">HDMI2</string>
    <string name="slave_usb">USB</string>
    <string name="slave_operation">操作</string>
    <string name="slave_horizontal_flip">水平翻转</string>
    <string name="slave_vertical_flip">垂直翻转</string>
    <string name="image_select">选择</string>
    <string name="image_select_button">图片</string>
    <string name="image_operation">操作</string>
    <string name="image_adapt">适应屏幕</string>
    <string name="image_horizontal_flip">水平翻转</string>
    <string name="image_vertical_flip">垂直翻转</string>
    <string name="image_full">铺满</string>
    <string name="image_rotation">旋转</string>
    <string name="set_size">等比大小</string>
    <string name="set_alpha">不透明度</string>
    <string name="set_play_speed">播放速度</string>
    <string name="set_alpha_diy">自定义</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="image_background_tips">建议使用\n9：16的竖版图片</string>
    <string name="content_text_size_setting_text">文字大小</string>
    <string name="content_text_transparent_setting_text">不透明度</string>
    <string name="content_text_scroll_speed_setting_text">滚动速度</string>
    <string name="content_background_setting_title_text">更改颜色</string>
    <string name="content_text_box_width_setting_text">文本框宽度</string>
    <string name="clear_background">清除</string>
    <string name="watermark_tips">*可拖动图片至方框内任意位置</string>
    <string name="storage_tips">请到小程序上传素材</string>
    <string name="view_QR_code"><u>查看二维码</u></string>
    <string name="not_selected_image">未选中图片</string>
    <string name="user_update_file">用户上传</string>
    <string name="system_upload_file">系统模板</string>
    <string name="watermark_setting">水印设置</string>
    <string name="protect_switch_text">安全区域</string>
    <string name="protect_size_select">大小调整</string>
    <string name="protect_color_text">黄色保护</string>
    <string name="dealing">应用中</string>
    <string name="loading">加载中…</string>
    <string name="gif_limit">GIF限制3张</string>
    <string name="pip_zoom_tip">双指拖动即可缩放</string>
    <string name="matting">抠图</string>
    <string name="matting_switch">开启抠像</string>
    <string name="blue_switch">蓝色幕布背景</string>
    <string name="camera_layout_select">画面布局</string>
    <string name="foreground_source">前景画面</string>
    <string name="background_source">背景画面</string>
    <string name="matting_color">扣除颜色</string>
    <string name="matting_intensity">抠图强度</string>
    <string name="matting_smooth">抠图平滑</string>
    <string name="matting_excessive">溢色抑制</string>
    <string name="up_down_layout_tip_1">选择图片/视频/摄像头</string>
    <string name="up_down_layout_tip_2">选择摄像头</string>
    <string name="material_tip">当前未上传素材</string>
    <string name="material_usb_tip">未插入U盘或U盘内没有素材</string>
    <string name="close">关闭</string>
    <string name="background_material">背景</string>
    <string name="background_material_space">背景 </string>
    <string name="background_image">背景图</string>
    <string name="watermark_image">水印</string>
    <string name="watermark_image_space">水印 </string>
    <string name="play_script">提词器 </string>
    <string name="document_text">PPT/PDF </string>
    <string name="template">模板 </string>
    <string name="record_screen">录屏 </string>
    <string name="common_file">公共模板</string>
    <string name="user_file">用户文件</string>
    <string name="usb_file">U盘</string>
    <string name="wx_program_code">1.小程序二维码</string>
    <string name="wx_program_code2">添加</string>
    <string name="reselect">重选</string>
    <string name="save_template">更新模板</string>
    <string name="save_as_other_template">另存为</string>
    <string name="make_rotate">旋转</string>
    <string name="make_top">置顶</string>
    <string name="bg_type_video">VIDEO</string>
    <string name="bg_type_image">IMAGE</string>
    <string name="save_path_select">选择保存目录</string>
    <string name="free_storage_text">空闲：</string>
    <string name="source_select_spinner">选择画面</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="record_save">已保存\n请在文件助手中查看</string>
    <string name="nginx_open">开启</string>
    <string name="nginx_tips">更换网络后请刷新二维码</string>
    <string name="rtmp_step_one">①：请确认直播机网络与手机网络在同一局域网下</string>
    <string name="rtmp_step_two">②：扫码进入“加汇合助手”小程序</string>
    <string name="rtmp_step_three">③：“摄像头推流”页面扫码获取配置</string>
    <string name="rtmp_connect_info">已连接</string>
    <string name="next_step">下一步</string>
    <string name="pre_step">上一步</string>
    <string name="pull_setting">拉流设置</string>
    <string name="connect_info_refresh"><u>刷新</u></string>
    <string name="qr_code_refresh"><u>刷新</u></string>
    <string name="audio_input_error">音频异常已断开\n请重新插入后再试</string>
    <string name="record_storage_no_free">存储空间不足</string>
    <string name="record_wait">录制初始化中，请稍候再试</string>
    <string name="record_prepare_fail">录制初始化失败，请稍候再试</string>
    <string name="record_error">录制出错</string>
    <string name="watermark_limit">水印仅支持10张</string>
    <string name="watermark_limit_pip">水印上屏已达10张上限\n请至侧边浮窗重新选择</string>
    <string name="watermark_gif_limit">GIF最多支持3张</string>
    <string name="watermark_gif_limit_pip">GIF上屏已达3张上限\n请至侧边浮窗重新选择</string>
    <string name="watermark_setwindow_limit">贴后水印\n请在使用画中画时进行操作</string>
    <string name="watermark_is_setting">请在水印编辑完成后操作</string>
    <string name="pip_background_limit">请先切换视频源后再应用素材</string>
    <string name="is_pip_used">是否贴后</string>
    <string name="top_watermark">贴前</string>
    <string name="under_watermark">贴后</string>
    <string name="watermark_edit_warning">请在编辑完成后再应用</string>
    <string name="watermark_setting_title">水印设置</string>
    <string name="background">背景</string>
    <string name="slave">子画面</string>
    <string name="template_is_loading">模板加载中</string>
    <string name="template_is_loading_pushing">(tips:切换模板会导致直播画面发生改变)</string>
    <string name="pip_background_rotate_limit">请在上屏后进行旋转</string>
    <string name="pip_setting_tips">请切换至竖屏设置PIP</string>
    <string name="template_update_success">模板更新成功</string>
    <string name="template_save_other_limit_fail">模板已达20个数量限制</string>
    <string name="template_save_other_complate">模板保存成功</string>
    <string name="template_need_save">当前模板是否更新配置</string>
    <string name="remember_text">记住我的选择，下次不再提示</string>
    <string name="file_dealing">文件处理中</string>
    <string name="pull_qr_refresh_text">此操作会使当前拉流断开\n是否确认？</string>
    <string name="please_wait">请稍候再试</string>
    <string name="audioSys_setting_name">外放</string>
    <string name="audioCall_setting_name">通话</string>
    <string name="audioSys_setting_delay">音频延迟</string>
    <string name="picture_in_picture">画中画</string>
    <string name="auto_save">(自动保存)</string>
    <string name="scan_the_qr_code">扫一扫，进入小程序添加台本</string>
    <string name="douyin_risk_warning_title">当您在本设备登录抖音时，请注意：</string>
    <string name="douyin_risk_warning_content">由于抖音平台对账号的风险监控，有时可能会出现账号被锁定的情况。不要担心，锁号并不会影响账号流量，您可以按照短信步骤自行解锁账号。</string>
    <string name="local_play_script_addition_tips">仅支持Word文档和TXT文本文件解析。</string>
    <string name="back_underline"><u>返回</u></string>
    <string name="deleting_play_script">正在删除台本</string>
    <string name="confirm_underline"><u>确认</u></string>
    <string name="add_underline"><u>添加</u></string>
    <string name="delete_underline"><u>删除</u></string>
    <string name="update_play_script">下拉获取最新数据</string>
    <string name="ps_insert_from_local">从本地导入台本</string>
    <string name="ps_insert_from_net">从小程序添加台本</string>
</resources>