<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/user_file"
        android:layout_width="@dimen/live_setting_text_btn_width"
        android:layout_height="wrap_content"
        android:background="@drawable/live_setting_btn_box_left"
        android:padding="5dp"
        android:text="@string/user_file"
        android:textAlignment="center"
        android:textColor="@drawable/live_setting_title_btn_color"
        android:textSize="@dimen/live_setting_default_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usb_file"
        android:layout_width="@dimen/live_setting_text_btn_width"
        android:layout_height="wrap_content"
        android:background="@drawable/live_setting_btn_box_right"
        android:padding="5dp"
        android:text="@string/usb_file"
        android:textAlignment="center"
        android:textColor="@drawable/live_setting_title_btn_color"
        android:textSize="@dimen/live_setting_default_text"
        app:layout_constraintStart_toEndOf="@id/user_file"
        app:layout_constraintTop_toTopOf="@id/user_file" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/document_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_file" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usb_document_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/user_file" />

    <TextView
        android:id="@+id/delete_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        android:text="@string/delete"
        android:textColor="@drawable/delete_text_color"
        android:textSize="@dimen/live_setting_default_text"
        app:layout_constraintBottom_toBottomOf="@id/usb_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/usb_file" />

    <TextView
        android:id="@+id/no_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/material_tip"
        android:textColor="@color/live_setting_default_text"
        android:textSize="@dimen/live_setting_default_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_file"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/no_usb_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/material_usb_tip"
        android:visibility="gone"
        android:textColor="@color/live_setting_default_text"
        android:textSize="@dimen/live_setting_default_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_file"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>